--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mariadb: [ 10 ]
+        mariadb: [ 10, 11 ]
     services:
       mysql:
         image: mariadb:${{ matrix.mariadb }}
