--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -31,24 +31,23 @@ RUN apt-get update && \
     unzip \
     nginx-light \
     openssl \
-    php8.3 \
-    php8.3-apcu \
-    php8.3-curl \
-    php8.3-pgsql \
-    php8.3-mysql \
-    php8.3-mbstring \
-    php8.3-gd \
-    php8.3-xml \
-    php8.3-zip \
-    php8.3-fpm \
-    php8.3-intl \
+    php8.4 \
+    php8.4-apcu \
+    php8.4-curl \
+    php8.4-pgsql \
+    php8.4-mysql \
+    php8.4-mbstring \
+    php8.4-gd \
+    php8.4-xml \
+    php8.4-zip \
+    php8.4-fpm \
+    php8.4-intl \
     nodejs && \
     corepack enable && \
 #Install composer dependencies
     curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer && \
 # Set permissions
-    chmod +x /entrypoint.sh && \
-    mkdir /run/php
+    chmod +x /entrypoint.sh
 
 # Add nginx and PHP config files
 COPY ./docker/default.conf /etc/nginx/nginx.conf
