Fix html file scrapper + add error logs in admin

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=
 ###< symfony/framework-bundle ###
 
@@ -13,7 +13,7 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=
 ###< lexik/jwt-authentication-bundle ###
 
-APP_DEBUG=0
+APP_DEBUG=1
 
 DB_DRIVER=pdo_pgsql
 DB_NAME=koillection
